--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "start": "node src/server/server.js",
     "dev": "webpack-cli --watch --progress --mode=development & nodemon src/server/server.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "heroku-postbuild": "webpack-cli -p --progress"
   },
   "keywords": [],
   "author": "Max Pridgen",
